--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 nav {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 5px;
+    background-color: #FFFFFF;
 }
 nav .btn {
     margin: 5px;
